# sphinx-hextra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: ci.yml  css-build.yml  docs-deploy.yml  release.yml
assets/css/: landing.css  layout.css  main.css  sphinx-needs.css
assets/css/components/: callout.css  cards.css  filetree.css  steps.css  tabs.css
assets/js/: theme-toggle.js
docs/: conf.py  getting-started.md  index.md  quickstart.md  sphinx-needs.md  ubproject.toml
docs/advanced/: additional-pages.md  comments.md  customization.md  index.md  multi-language.md  sphinx-needs.md
docs/components/: callout.md  cards.md  filetree.md  steps.md  tabs.md
docs/guide/: configuration.md  deploy.md  diagrams.md  index.md  latex.md  markdown.md  organize-files.md  syntax-highlighting.md
docs/guide/directives/: callout.md  cards.md  filetree.md  index.md  landing.md  steps.md  tabs.md
docs/superpowers/plans/: 2026-04-11-sphinx-hextra.md
docs/superpowers/specs/: 2026-04-11-sphinx-hextra-design.md
src/sphinx_hextra/: __init__.py  needs_integration.py  nodes.py
src/sphinx_hextra/directives/: __init__.py  _base.py  callout.py  cards.py  filetree.py  landing.py  steps.py  tabs.py
src/sphinx_hextra/theme/sphinx_hextra/: layout.html  page.html  theme.toml
src/sphinx_hextra/theme/sphinx_hextra/partials/: footer.html  navbar.html  sidebar.html  theme-toggle.html  toc.html
src/sphinx_hextra/theme/sphinx_hextra/static/: sphinx-hextra-needs.css  sphinx-hextra.css  tabs.js
tests/: conftest.py
tests/integration/: test_callout.py  test_cards.py  test_filetree.py  test_js_assets.py  test_landing.py  test_layout_structure.py  test_needs_integration.py  test_steps.py  test_tabs.py  test_theme_loads.py
tests/integration/roots/test-callout/: index.md
tests/integration/roots/test-cards/: index.md
tests/integration/roots/test-filetree/: conf.py  index.md
tests/integration/roots/test-landing/: index.md
tests/integration/roots/test-needs/: conf.py  index.rst
tests/integration/roots/test-steps/: conf.py  index.md
tests/integration/roots/test-tabs/: index.md
tests/integration/roots/test-theme-loads/: conf.py  index.rst
