[project]
name = "sphinx-hextra"
version = "0.1.0.dev0"
description = "A Sphinx theme and directive set bringing the Hextra aesthetic to Sphinx, with sphinx-needs integration."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Patrick Dahlke" }]
keywords = ["sphinx", "theme", "documentation", "hextra", "sphinx-needs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "sphinx>=7",
    "docutils>=0.19",
]

[project.urls]
Homepage = "https://github.com/patdhlk/sphinx-hextra"
Repository = "https://github.com/patdhlk/sphinx-hextra"
Issues = "https://github.com/patdhlk/sphinx-hextra/issues"

[project.entry-points."sphinx.html_themes"]
sphinx_hextra = "sphinx_hextra"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
    "myst-parser>=3",
    "sphinx-needs>=3",
    "beautifulsoup4>=4.12",
    "lxml>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_hextra"]

[tool.hatch.build]
exclude = [
    "assets/",
    "package.json",
    "package-lock.json",
    "tailwind.config.js",
    "node_modules/",
    "tests/",
    "docs/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
