[project]
name = "sphinx-hextra"
version = "0.1.1"
description = "A Sphinx theme and directive set bringing the Hextra aesthetic to Sphinx, with sphinx-needs integration."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Patrick Dahlke" }]
keywords = ["sphinx", "theme", "documentation", "hextra", "sphinx-needs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "sphinx>=7",
    "docutils>=0.19",
]

[project.urls]
Homepage = "https://github.com/patdhlk/sphinx-hextra"
Documentation = "https://patdhlk.com/sphinx-hextra/"
Repository = "https://github.com/patdhlk/sphinx-hextra"
Issues = "https://github.com/patdhlk/sphinx-hextra/issues"
Changelog = "https://github.com/patdhlk/sphinx-hextra/blob/main/CHANGELOG.md"

[project.entry-points."sphinx.html_themes"]
sphinx_hextra = "sphinx_hextra"

[dependency-groups]
# `docs` is everything needed to build the demo site under docs/.
# sphinx-needs is NOT a runtime dependency of the sphinx-hextra package —
# `src/sphinx_hextra/needs_integration.py` only activates if sphinx_needs is
# already loaded as a Sphinx extension by the user. It lives here because
# our own demo site uses it to showcase the integration.
docs = [
    "myst-parser>=3",
    "sphinx-needs>=8",
]

# `test` adds the test runner and HTML-parsing helpers. It pulls in `docs`
# so `tests/integration/test_needs_integration.py` can build a Sphinx
# project that uses sphinx-needs.
test = [
    "pytest>=8",
    "pytest-xdist>=3",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    {include-group = "docs"},
]

# `dev` is the one-shot group for contributors — tests + docs in one go.
dev = [
    {include-group = "test"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_hextra"]

[tool.hatch.build.targets.sdist]
exclude = [
    "assets/",
    "package.json",
    "package-lock.json",
    "tailwind.config.js",
    "node_modules/",
    "tests/",
    "docs/",
    ".claude/",
    ".github/",
    ".pytest_cache/",
    ".venv/",
    ".python-version",
    "dist/",
    "uv.lock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
